src/main/java/edu/uiowa/jopenmm/AmoebaOpenMMLibrary.java

package edu.uiowa.jopenmm;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import java.nio.DoubleBuffer;
import java.nio.IntBuffer;
/**
 * JNA Wrapper for library <b>AmoebaOpenMM</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 *
 * @author mjschnie
 * @version $Id: $Id
 */
public class AmoebaOpenMMLibrary implements Library {
        /** Constant <code>JNA_LIBRARY_NAME="OpenMMAmoeba"</code> */
        public static final String JNA_LIBRARY_NAME = "OpenMMAmoeba";
	// public static final String JNA_LIBRARY_NAME = "AmoebaOpenMM";
	/** Constant <code>JNA_NATIVE_LIB</code> */
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(AmoebaOpenMMLibrary.JNA_LIBRARY_NAME);
	static {
		Native.register(AmoebaOpenMMLibrary.class, AmoebaOpenMMLibrary.JNA_NATIVE_LIB);
	}
	/** enum values */
	public static interface OpenMM_AmoebaVdwForce_NonbondedMethod {
		public static final int OpenMM_AmoebaVdwForce_NoCutoff = 0;
		public static final int OpenMM_AmoebaVdwForce_CutoffPeriodic = 1;
	};
	/** enum values */
	public static interface OpenMM_AmoebaVdwForce_AlchemicalMethod {
		public static final int OpenMM_AmoebaVdwForce_None = 0;
		public static final int OpenMM_AmoebaVdwForce_Decouple = 1;
		public static final int OpenMM_AmoebaVdwForce_Annihilate = 2;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_NonbondedMethod {
		public static final int OpenMM_AmoebaMultipoleForce_NoCutoff = 0;
		public static final int OpenMM_AmoebaMultipoleForce_PME = 1;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_PolarizationType {
		public static final int OpenMM_AmoebaMultipoleForce_Mutual = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Direct = 1;
		public static final int OpenMM_AmoebaMultipoleForce_Extrapolated = 2;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_MultipoleAxisTypes {
		public static final int OpenMM_AmoebaMultipoleForce_ZThenX = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Bisector = 1;
		public static final int OpenMM_AmoebaMultipoleForce_ZBisect = 2;
		public static final int OpenMM_AmoebaMultipoleForce_ThreeFold = 3;
		public static final int OpenMM_AmoebaMultipoleForce_ZOnly = 4;
		public static final int OpenMM_AmoebaMultipoleForce_NoAxisType = 5;
		public static final int OpenMM_AmoebaMultipoleForce_LastAxisTypeIndex = 6;
	};
	/** enum values */
	public static interface OpenMM_AmoebaMultipoleForce_CovalentType {
		public static final int OpenMM_AmoebaMultipoleForce_Covalent12 = 0;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent13 = 1;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent14 = 2;
		public static final int OpenMM_AmoebaMultipoleForce_Covalent15 = 3;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent11 = 4;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent12 = 5;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent13 = 6;
		public static final int OpenMM_AmoebaMultipoleForce_PolarizationCovalent14 = 7;
		public static final int OpenMM_AmoebaMultipoleForce_CovalentEnd = 8;
	};
	/** enum values */
	public static interface OpenMM_HippoNonbondedForce_NonbondedMethod {
		public static final int OpenMM_HippoNonbondedForce_NoCutoff = 0;
		public static final int OpenMM_HippoNonbondedForce_PME = 1;
	};
	/** enum values */
	public static interface OpenMM_HippoNonbondedForce_ParticleAxisTypes {
		public static final int OpenMM_HippoNonbondedForce_ZThenX = 0;
		public static final int OpenMM_HippoNonbondedForce_Bisector = 1;
		public static final int OpenMM_HippoNonbondedForce_ZBisect = 2;
		public static final int OpenMM_HippoNonbondedForce_ThreeFold = 3;
		public static final int OpenMM_HippoNonbondedForce_ZOnly = 4;
		public static final int OpenMM_HippoNonbondedForce_NoAxisType = 5;
	};
	/** Global Constants */
	public static final double OpenMM_NmPerAngstrom = 0.1;
	/** Constant <code>OpenMM_AngstromsPerNm=10.0</code> */
	public static final double OpenMM_AngstromsPerNm = 10.0;
	/** Constant <code>OpenMM_PsPerFs=0.001</code> */
	public static final double OpenMM_PsPerFs = 0.001;
	/** Constant <code>OpenMM_FsPerPs=1000.0</code> */
	public static final double OpenMM_FsPerPs = 1000.0;
	/** Constant <code>OpenMM_KJPerKcal=4.184</code> */
	public static final double OpenMM_KJPerKcal = 4.184;
	/** Constant <code>OpenMM_KcalPerKJ=1.0 / 4.184</code> */
	public static final double OpenMM_KcalPerKJ = 1.0 / 4.184;
	/** Constant <code>OpenMM_RadiansPerDegree=3.1415926535897932385 / 180.0</code> */
	public static final double OpenMM_RadiansPerDegree = 3.1415926535897932385 / 180.0;
	/** Constant <code>OpenMM_DegreesPerRadian=180.0 / 3.1415926535897932385</code> */
	public static final double OpenMM_DegreesPerRadian = 180.0 / 3.1415926535897932385;
	/** Constant <code>OpenMM_SigmaPerVdwRadius=1.7817974362806786095</code> */
	public static final double OpenMM_SigmaPerVdwRadius = 1.7817974362806786095;
	/**
	 * OpenMM_3D_DoubleArray<br>
	 * Original signature : <code>OpenMM_3D_DoubleArray* OpenMM_3D_DoubleArray_create(int, int, int)</code>
	 *
	 * @param size1 a int.
	 * @param size2 a int.
	 * @param size3 a int.
	 * @return a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native PointerByReference OpenMM_3D_DoubleArray_create(int size1, int size2, int size3);
	/**
	 * Original signature : <code>void OpenMM_3D_DoubleArray_set(OpenMM_3D_DoubleArray*, int, int, OpenMM_DoubleArray*)</code>
	 *
	 * @param array a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index1 a int.
	 * @param index2 a int.
	 * @param values a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_3D_DoubleArray_set(PointerByReference array, int index1, int index2, PointerByReference values);
	/**
	 * Original signature : <code>void OpenMM_3D_DoubleArray_destroy(OpenMM_3D_DoubleArray*)</code>
	 *
	 * @param array a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_3D_DoubleArray_destroy(PointerByReference array);
	/**
	 * AmoebaBondForce<br>
	 * Original signature : <code>OpenMM_AmoebaBondForce* OpenMM_AmoebaBondForce_create()</code>
	 *
	 * @return a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native PointerByReference OpenMM_AmoebaBondForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_destroy(OpenMM_AmoebaBondForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaBondForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaBondForce_getNumBonds(const OpenMM_AmoebaBondForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaBondForce_getNumBonds(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(OpenMM_AmoebaBondForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param cubicK a double.
	 */
	public static native void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(const OpenMM_AmoebaBondForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(OpenMM_AmoebaBondForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param quarticK a double.
	 */
	public static native void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(const OpenMM_AmoebaBondForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaBondForce_addBond(OpenMM_AmoebaBondForce*, int, int, double, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particle1 a int.
	 * @param particle2 a int.
	 * @param length a double.
	 * @param quadraticK a double.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaBondForce_addBond(PointerByReference target, int particle1, int particle2, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_getBondParameters(const OpenMM_AmoebaBondForce*, int, int*, int*, double*, double*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index a int.
	 * @param particle1 a {@link java.nio.IntBuffer} object.
	 * @param particle2 a {@link java.nio.IntBuffer} object.
	 * @param length a {@link java.nio.DoubleBuffer} object.
	 * @param quadraticK a {@link java.nio.DoubleBuffer} object.
	 */
	public static native void OpenMM_AmoebaBondForce_getBondParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, DoubleBuffer length, DoubleBuffer quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_getBondParameters(const OpenMM_AmoebaBondForce*, int, int*, int*, double*, double*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index a int.
	 * @param particle1 a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param particle2 a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param length a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param quadraticK a {@link com.sun.jna.ptr.DoubleByReference} object.
	 */
	public static native void OpenMM_AmoebaBondForce_getBondParameters(PointerByReference target, int index, IntByReference particle1, IntByReference particle2, DoubleByReference length, DoubleByReference quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setBondParameters(OpenMM_AmoebaBondForce*, int, int, int, double, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index a int.
	 * @param particle1 a int.
	 * @param particle2 a int.
	 * @param length a double.
	 * @param quadraticK a double.
	 */
	public static native void OpenMM_AmoebaBondForce_setBondParameters(PointerByReference target, int index, int particle1, int particle2, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_updateParametersInContext(OpenMM_AmoebaBondForce*, OpenMM_Context*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param context a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaBondForce_updateParametersInContext(PointerByReference target, PointerByReference context);
